# BridgeOne

./: .gitignore  CLAUDE.md  README.md  test_command_system.py
.claude/commands/: bridgeone-commands.md  bridgeone-esp32.md  bridgeone-protocol.md  bridgeone-troubleshoot.md  debug.md
.cursor/commands/: Changes.md  Context7.md  Develop Step-by-step.md  Give me a commit message.md  How do you think.md  How to know we're doing right.md  Sequential Thinking.md  give me a commit message.md
.cursor/rules/: commit-message-format.mdc  csharp-implementation.mdc  phase-development-workflow.mdc  think.mdc  tinyusb-advanced-features.mdc  tinyusb-architecture.mdc  tinyusb-debugging.mdc  (+6 more)
Android/: settings.gradle.kts
Docs/: PRD.md  android-workspace-rule-generator.md  board-workspace-rule-generator.md  development-plan-checklist.md  document-review-plan-checklist.md  documentation-guide.md  integrated-user-flow-guide.md  technical-specification.md  windows-workspace-rule-generator.md
claudedocs/: usb-architecture-analysis-2025-11-25.md
docs/: PRD.md  bridgeone-logo-concepts.md  development-plan-checklist.md  documentation-guide.md  technical-specification.md
scripts/: check-hid-devices.ps1  flash-to-com8.bat
src/board/BridgeOne/main/: BridgeOne.c  CMakeLists.txt  connection_state.c  connection_state.h  hid_handler.c  hid_handler.h  hid_test.c  hid_test.h  idf_component.yml  tusb_config.h  uart_handler.c  uart_handler.h  usb_cdc_log.c  usb_cdc_log.h  usb_descriptors.c  usb_descriptors.h  vendor_cdc_handler.c  vendor_cdc_handler.h  voltage_monitor.c  voltage_monitor.h
(+293 files in other folders)
